# monday-kernel

./: .gitignore  LICENSE  README.md  run_monday.sh  test_vault.sh
agents/: requirements.txt
agents/secretary_agent/: live_listener.py  requirements.txt  secretary.py
agents/vault_agent/: config.py  ingestor.py  main.py  test_connections.py
core-orchestrator/: Cargo.toml
core-orchestrator/src/: main.rs
infrastructure/: docker-compose.yml
sentinel-ui/MondaySentinel.App/: MondaySentinel.App.csproj  Program.cs  SearchOverlay.cs
